# slurminade

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODERNIZATION_SUMMARY.md  PHASE2_IMPROVEMENTS.md  PHASE3_IMPROVEMENTS.md  README.md  README.rst  TYPING_AND_LOGGING_IMPROVEMENTS.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  pytest.yml  release.yml
docs/: conf.py  index.rst  modules.rst  slurminade.rst
examples/: example_1.py  example_2.py  example_2b.py  example_3.py
slurminade/: __init__.py  autobatch.py  batch.py  conf.py  dispatcher.py  execute.py  function.py  function_map.py  guard.py  options.py
src/slurminade/: __init__.py  batch.py  bundling.py  check.py  conf.py  dispatcher.py  execute.py  execute_cmds.py  function.py  function_call.py  function_map.py  guard.py  job_reference.py  node_setup.py  options.py
tests/: test_conf.py  test_create_command.py  test_create_command_with_noise.py  test_dispatch_guard.py  test_local.py  test_local_function.py  test_node_setup.py  test_optimize_flag.py  test_options.py  test_subprocess.py  test_version.py
