[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "slurminade"
version = "1.2.0"
authors = [
    { name = "TU Braunschweig, IBR, Algorithms Group (Dominik Krupke)", email = "krupke@ibr.cs.tu-bs.de" },
]
description = "A decorator-based slurm runner."
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]
keywords=["slurm", "hpc", "batch", "cluster", "distributed"]
dependencies = [
    "simple_slurm>=0.2.6",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ty>=0.0.1",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/d-krupke/slurminade"
Issues = "https://github.com/d-krupke/slurminade/issues"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]


[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "tests/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"


[tool.ruff]
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W", # flake8
    "B",  "B904",  # flake8-bugbear
    "I",           # isort
    "ARG",         # flake8-unused-arguments
    "C4",          # flake8-comprehensions
    "EM",          # flake8-errmsg
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "RET",         # flake8-return
    "RUF",         # Ruff-specific
    "SIM",         # flake8-simplify
    "TID251",      # flake8-tidy-imports.banned-api
    "T20",         # flake8-print
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
extend-ignore = [
    "PLR",     # Design rules for pylint
    "PLE1205", # Format check doesn't work with our custom logger
    "E501",    # Line too long
    "RUF009",  # Too easy to get a false positive
]
unfixable = ["T20", "F841"]

[tool.ruff.lint.per-file-ignores]
"src/slurminade/__init__.py" = ["E402", "F401", "RUF022"]
"src/slurminade/check.py" = ["T201", "PLC0415"]
"src/slurminade/function_map.py" = ["PLC0415"]
"examples/*" = ["T201", "PTH123"]
"docs/*" = ["PTH100"]
"tests/*" = ["T201"]


[tool.mypy]
files = ["src", "tests"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src"]
python_version = "3.9"
warn_unused_configs = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["simple_slurm"]
ignore_missing_imports = true
